@@ -12,6 +12,7 @@
   * Nokogiri::XML::Attribute が JRuby 上で　nil namespace を返す　#647
   * Nokogiri::XML::Node#namespace= メソッドが JRuby　上で prefix　が無い namespace を設定できない #648
   * JRuby 1.9 モードで rake を実行するとデッドロックを引き起こす #571
+  * HTML::Document#meta_encoding does not raise exception on docs with malformed content-type. #655
 
 
 == 1.5.2 / 2012-03-09
