@@ -125,8 +125,10 @@ module Nokogiri
 
       def test_meta_encoding
         assert_equal 'UTF-8', @html.meta_encoding
+      end
 
-        html = Nokogiri::HTML(<<-eohtml)
+      def test_meta_encoding_is_strict_about_http_equiv
+        doc = Nokogiri::HTML(<<-eohtml)
 <html>
   <head>
     <meta http-equiv="X-Content-Type" content="text/html; charset=Shift_JIS">
@@ -136,7 +138,21 @@ module Nokogiri
   </body>
 </html>
         eohtml
-        assert_nil html.meta_encoding
+        assert_nil doc.meta_encoding
+      end
+
+      def test_meta_encoding_handles_malformed_content_charset
+        doc = Nokogiri::HTML(<<EOHTML)
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; utf-8" />
+  </head>
+  <body>
+    foo
+  </body>
+</html>
+EOHTML
+        assert_nil doc.meta_encoding
       end
 
       def test_meta_encoding=
